Making the scoring indexing logic better