@@ -3,6 +3,7 @@ package com.samyak.job_intelligence.job.service.matching;
 import com.samyak.job_intelligence.candidate.domain.CandidateSkill;
 import com.samyak.job_intelligence.candidate.repository.CandidateSkillRepository;
 import com.samyak.job_intelligence.job.domain.JobRequirement;
+import com.samyak.job_intelligence.job.domain.RequirementMatchMode;
 import com.samyak.job_intelligence.job.domain.RequirementType;
 import com.samyak.job_intelligence.job.repository.JobRequirementRepository;
 import org.springframework.stereotype.Service;
@@ -27,50 +28,159 @@ public class SkillMatchingService {
         requirements.addAll(jobRequirementRepository.findByJobIdAndRequirementType(jobId,RequirementType.TECHNOLOGY));
 
         if(requirements.isEmpty()){
-            return new SkillMatchResult(List.of(),List.of(),List.of(),List.of(),0,0);
+            return new SkillMatchResult(List.of(),List.of(),List.of(),List.of(),0,0,0,0);
         }
 
-        List<SkillRequirement> skillRequirements = requirements.stream()
-                .collect(Collectors.toMap(JobRequirement::getNormalizedValue,
-                        requirement -> new SkillRequirement(requirement.getNormalizedValue(),requirement.isMandatory()
-                ),
-                        (first,second) -> new SkillRequirement(first.skill(), first.mandatory() || second.mandatory()),
-                        LinkedHashMap::new
-                        ))
-                .values().stream().toList();
+        Map<String, RequirementGroup> groups = requirements.stream()
+                .collect(Collectors.groupingBy(
+                        this::effectiveGroupId,
+                        LinkedHashMap::new,
+                        Collectors.collectingAndThen(
+                                Collectors.toList(),
+                                RequirementGroup::from
+                        )
+                ));
 
-        List<String> requiredSkills = skillRequirements.stream().map(SkillRequirement::skill).toList();
-
-        List<CandidateSkill> candidateSkills = candidateSkillRepository.findByCandidateProfile_IdAndNormalizedSkillIn(candidateProfileId,requiredSkills);
-
-        Set<String> matchedSkillSet = candidateSkills.stream().map(CandidateSkill :: getNormalizedSkill).collect(Collectors.toCollection(LinkedHashSet::new));
-
-        List<String> matchedSkills = requiredSkills.stream().filter(matchedSkillSet::contains).toList();
-
-        List<String> missingSkills = requiredSkills.stream()
-                .filter(skill -> !matchedSkillSet.contains(skill))
+        List<String> requiredSkills = groups.values().stream()
+                .flatMap(group -> group.skills().stream())
+                .distinct()
                 .toList();
 
-        List<String> missingMandatorySkills = skillRequirements.stream()
-                .filter(requirement -> requirement.mandatory()  && !matchedSkillSet.contains(requirement.skill())
-                ).map(SkillRequirement::skill)
-                .toList();
+        List<CandidateSkill> candidateSkills =
+                candidateSkillRepository
+                        .findByCandidateProfile_IdAndNormalizedSkillIn(
+                                candidateProfileId,
+                                requiredSkills
+                        );
 
-        long mandatoryRequirements = skillRequirements.stream()
-                .filter(SkillRequirement::mandatory)
-                .count();
-        List<String> mandatorySkills = skillRequirements.stream()
-                .filter(SkillRequirement::mandatory)
-                .map(SkillRequirement::skill)
-                .toList();
+        Set<String> candidateSkillSet = candidateSkills.stream()
+                .map(CandidateSkill::getNormalizedSkill)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+
+        List<String> matchedSkills = new ArrayList<>();
+        List<String> missingSkills = new ArrayList<>();
+        List<String> mandatorySkills = new ArrayList<>();
+        List<String> missingMandatorySkills = new ArrayList<>();
+
+        int matchedRequirements = 0;
+        int mandatoryRequirements = 0;
+        int matchedMandatoryRequirements = 0;
+
+        for (RequirementGroup group : groups.values()) {
+
+            boolean matched = isGroupMatched(group, candidateSkillSet);
+
+            List<String> groupMatchedSkills = group.skills().stream()
+                    .filter(candidateSkillSet::contains)
+                    .toList();
+
+            List<String> groupMissingSkills = group.skills().stream()
+                    .filter(skill -> !candidateSkillSet.contains(skill))
+                    .toList();
+
+            if (matched) {
+                matchedRequirements++;
+                matchedSkills.addAll(groupMatchedSkills);
+            } else {
+                missingSkills.addAll(groupMissingSkills);
+            }
+
+            if (group.mandatory()) {
+                mandatoryRequirements++;
+                mandatorySkills.addAll(group.skills());
+
+                if (matched) {
+                    matchedMandatoryRequirements++;
+                } else {
+                    missingMandatorySkills.addAll(groupMissingSkills);
+                }
+            }
+        }
 
         return new SkillMatchResult(
-                matchedSkills,
-                missingSkills,
-                mandatorySkills,
-                missingMandatorySkills,
-                requiredSkills.size(),
-                (int) mandatoryRequirements
+                List.copyOf(matchedSkills),
+                List.copyOf(missingSkills),
+                List.copyOf(mandatorySkills),
+                List.copyOf(missingMandatorySkills),
+                groups.size(),
+                mandatoryRequirements,
+                matchedRequirements,
+                matchedMandatoryRequirements
         );
+    }
+
+    private boolean isGroupMatched(
+            RequirementGroup group,
+            Set<String> candidateSkillSet
+    ) {
+        return switch (group.matchMode()) {
+
+            case SINGLE, ANY_OF ->
+                    group.skills().stream()
+                            .anyMatch(candidateSkillSet::contains);
+
+            case ALL_OF ->
+                    candidateSkillSet.containsAll(group.skills());
+        };
+    }
+
+    private String effectiveGroupId(JobRequirement requirement) {
+
+        if (requirement.getGroupId() != null
+                && !requirement.getGroupId().isBlank()) {
+
+            return requirement.getGroupId();
+        }
+
+        /*
+         * Backward compatibility for requirements created before
+         * groupId was introduced.
+         */
+        return "legacy:"
+                + requirement.getRequirementType()
+                + ":"
+                + requirement.getNormalizedValue();
+    }
+
+    private record RequirementGroup(
+            String groupId,
+            RequirementMatchMode matchMode,
+            boolean mandatory,
+            List<String> skills
+    ) {
+
+        static RequirementGroup from(List<JobRequirement> requirements) {
+
+            if (requirements.isEmpty()) {
+                throw new IllegalArgumentException(
+                        "Requirement group cannot be empty"
+                );
+            }
+
+            RequirementMatchMode matchMode = requirements.getFirst()
+                    .getRequirementMatchMode();
+
+            if (matchMode == null) {
+                matchMode = RequirementMatchMode.SINGLE;
+            }
+
+            boolean mandatory = requirements.stream()
+                    .anyMatch(JobRequirement::isMandatory);
+
+            List<String> skills = requirements.stream()
+                    .map(JobRequirement::getNormalizedValue)
+                    .filter(Objects::nonNull)
+                    .filter(skill -> !skill.isBlank())
+                    .distinct()
+                    .toList();
+
+            return new RequirementGroup(
+                    requirements.getFirst().getGroupId(),
+                    matchMode,
+                    mandatory,
+                    skills
+            );
+        }
     }
 }
